@@ -1,6 +1,6 @@
 Package: Cprob
 Title: Conditional probability function of a competing event
-Version: 1.0
+Version: 1.1
 Author: Arthur Allignol
 Description: Estimates the conditional probability function of a
         competing event, and fits, using the temporal process
@@ -9,6 +9,6 @@ Description: Estimates the conditional probability function of a
 Maintainer: Arthur Allignol <arthur.allignol@fdm.uni-freiburg.de>
 Depends: prodlim, tpr, lattice, geepack
 License: GPL (>= 2)
-Packaged: 2009-11-28 21:17:20 UTC; arthur
+Packaged: 2010-02-11 11:19:24 UTC; arthur
 Repository: CRAN
-Date/Publication: 2009-11-29 17:22:48
+Date/Publication: 2010-02-11 11:43:45
