@@ -1,5 +1,5 @@
 
-R version 2.10.0 (2009-10-26)
+R version 2.10.1 (2009-12-14)
 Copyright (C) 2009 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -30,6 +30,7 @@ Loading required package: lgtdl
 Loading required package: Matrix
 Loading required package: lattice
 Loading required package: geepack
+Loading required package: doBy
 > 
 > ### test 1
 > data(mgus)
@@ -251,4 +252,89 @@ age      1.0386     0.9628    1.0034     1.075
 creat    0.8934     1.1193    0.6557     1.217
 
 >        
+> 
+> ### test 6: playing with cens.conde
+> mm <- mgus
+> mm$ev <- ifelse(mm$ev == 0, 4, mm$ev)
+> 
+> test1 <- pseudocpf(Hist(time, ev, cens.code = "4") ~ age + creat, mm, id = id, timep = cutoffs,
++                    corstr = "independence", scale.value = TRUE)
+> 
+> test2 <- cpfpo(Hist(time, ev, cens.code = "4") ~ age + creat, mm,
++                tis=seq(10, 30, 0.3), w=rep(1,67))
+> 
+> test2$alpha == fit$alpha
+      (Intercept)  age creat
+ [1,]        TRUE TRUE  TRUE
+ [2,]        TRUE TRUE  TRUE
+ [3,]        TRUE TRUE  TRUE
+ [4,]        TRUE TRUE  TRUE
+ [5,]        TRUE TRUE  TRUE
+ [6,]        TRUE TRUE  TRUE
+ [7,]        TRUE TRUE  TRUE
+ [8,]        TRUE TRUE  TRUE
+ [9,]        TRUE TRUE  TRUE
+[10,]        TRUE TRUE  TRUE
+[11,]        TRUE TRUE  TRUE
+[12,]        TRUE TRUE  TRUE
+[13,]        TRUE TRUE  TRUE
+[14,]        TRUE TRUE  TRUE
+[15,]        TRUE TRUE  TRUE
+[16,]        TRUE TRUE  TRUE
+[17,]        TRUE TRUE  TRUE
+[18,]        TRUE TRUE  TRUE
+[19,]        TRUE TRUE  TRUE
+[20,]        TRUE TRUE  TRUE
+[21,]        TRUE TRUE  TRUE
+[22,]        TRUE TRUE  TRUE
+[23,]        TRUE TRUE  TRUE
+[24,]        TRUE TRUE  TRUE
+[25,]        TRUE TRUE  TRUE
+[26,]        TRUE TRUE  TRUE
+[27,]        TRUE TRUE  TRUE
+[28,]        TRUE TRUE  TRUE
+[29,]        TRUE TRUE  TRUE
+[30,]        TRUE TRUE  TRUE
+[31,]        TRUE TRUE  TRUE
+[32,]        TRUE TRUE  TRUE
+[33,]        TRUE TRUE  TRUE
+[34,]        TRUE TRUE  TRUE
+[35,]        TRUE TRUE  TRUE
+[36,]        TRUE TRUE  TRUE
+[37,]        TRUE TRUE  TRUE
+[38,]        TRUE TRUE  TRUE
+[39,]        TRUE TRUE  TRUE
+[40,]        TRUE TRUE  TRUE
+[41,]        TRUE TRUE  TRUE
+[42,]        TRUE TRUE  TRUE
+[43,]        TRUE TRUE  TRUE
+[44,]        TRUE TRUE  TRUE
+[45,]        TRUE TRUE  TRUE
+[46,]        TRUE TRUE  TRUE
+[47,]        TRUE TRUE  TRUE
+[48,]        TRUE TRUE  TRUE
+[49,]        TRUE TRUE  TRUE
+[50,]        TRUE TRUE  TRUE
+[51,]        TRUE TRUE  TRUE
+[52,]        TRUE TRUE  TRUE
+[53,]        TRUE TRUE  TRUE
+[54,]        TRUE TRUE  TRUE
+[55,]        TRUE TRUE  TRUE
+[56,]        TRUE TRUE  TRUE
+[57,]        TRUE TRUE  TRUE
+[58,]        TRUE TRUE  TRUE
+[59,]        TRUE TRUE  TRUE
+[60,]        TRUE TRUE  TRUE
+[61,]        TRUE TRUE  TRUE
+[62,]        TRUE TRUE  TRUE
+[63,]        TRUE TRUE  TRUE
+[64,]        TRUE TRUE  TRUE
+[65,]        TRUE TRUE  TRUE
+[66,]        TRUE TRUE  TRUE
+[67,]        TRUE TRUE  TRUE
+> 
+> summary(test1)$coef == summary(fit1)$coef
+      coef exp(coef) se(coef)    w Pr(>|w|)
+age   TRUE      TRUE     TRUE TRUE     TRUE
+creat TRUE      TRUE     TRUE TRUE     TRUE
 > 
